# Twitter-clone

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.dev  pyproject.toml
social/: admin.py  forms.py  urls.py  views.py
social/migrations/: 0001_initial.py  0002_profile_date.py  0003_message.py  0004_profile_background_image_profile_profile_image.py  0005_message_likes.py  0006_profile_profile_bio_profile_profile_location_and_more.py  0007_message_parent_message_alter_profile_profile_bio.py
social/models/: __init__.py  social.py
social/serializers/: __init__.py  social_serializer.py
social/static/basic/: login.css  style.css
social/static/js/: login.js
social/templates/: base.html  edit_user.html  home.html  login.html  message_show.html  messages.html  navbar.html  profile.html  profile_content.html  profile_list.html  profiless.html  profiless_content.html
social/viewsets/: profile_viewset.py
static/basic/: login.css  style.css
static/js/: emote.js  formbio.js  listprofile.js  login.js  register.js  update_likes.js
twitter_clone/: asgi.py  settings.py  urls.py
