[tool.poetry]
name = "twitter-clone"
version = "0.1.0"
description = ""
authors = ["Beatriz <beatrizleite_aragao@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"
django = "5.0.4"
django-rest-framework = "^0.1.0"
requests = "^2.31.0"
pillow = "^10.1.0"
django-debug-toolbar = "^4.2.0"
psycopg2-binary = "^2.9.9"
django-htmx = "^1.17.3"
reportlab = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
